update Boxing Day title

--- a/index-FR.html
+++ b/index-FR.html
@@ -36,7 +36,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 		<li class="h4"><a href="#marketplace">Place de marché</a> <i class="alti-icon alti-icon-marketplace"></i></li>
 		<li class="h4 d-md-none"><a href="#faq">FAQ</a></li>
 		<li class="h4"><a href="#contact">Nous contacter</a></li>
-		<li class="h4" style="border-top: 1px #000 solid;margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">FAQ Soldes d’après Noël</a></li>
+		<li class="h4" style="border-top: 1px #000 solid;margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">FAQ Soldes d'après Noël</a></li>
 	</ul>
 	<h2 class="d-none d-md-block faq-menu">FAQ</h2>
 	<ul class="top-questions list-unstyled d-none d-md-block">
@@ -1162,7 +1162,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 	<!-- END Contact -->
 	<!-- Boxing Day -->
 	<div class="content" id="boxingday">
-		<h1>FAQ Soldes d'avant Noël</h1>
+		<h1>FAQ Soldes d'après Noël</h1>
 		<p>Si vous êtes familier avec les soldes d’après Noël, vous êtes probablement déjà occupé à consulter les sites de vos magasins favoris et à mettre des signets aux rabais que vous ne voulez pas manquer.</p>
 		<p>Dans le but d’améliorer votre expérience de magasinage durant les soldes d’après Noël, nous avons rassemblé une liste des questions les plus posées par nos clients au cours des dernières années. Nous espérons que vous y trouverez réponse à toutes vos interrogations. Il ne vous restera plus qu’à encercler les dates sur votre calendrier et à programmer une alarme pour ne rien manquer <a href="/pages/boxing-day">des rabais</a>.</p>
 		<div id="accordionBoxingday" class="accordion">
@@ -1204,7 +1204,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>S’agit-il de ventes finales?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-sale-finals">
-					<p>Non, vous bénéficiez de la <a href="#returns_3">politique de retour de 90</a> jours habituelle. Nous vous encourageons à acheter un même produit en plusieurs tailles pour l’essayer si vous n’êtes pas certain de votre grandeur puisque les stocks seront limités après les soldes d’après Noël. Nous <a href="#returns">retourner un produit</a> est simple, facile et gratuit pour les <a href="/products/membership">membres à vie Altitude Sports</p> et les clients qui placent une première commande. </p>
+					<p>Non, vous bénéficiez de la <a href="#returns_3">politique de retour de 90</a> jours habituelle. Nous vous encourageons à acheter un même produit en plusieurs tailles pour l’essayer si vous n’êtes pas certain de votre grandeur puisque les stocks seront limités après les soldes d’après Noël. Nous <a href="#returns">retourner un produit</a> est simple, facile et gratuit pour les <a href="/products/membership">membres à vie Altitude Sports</a> et les clients qui placent une première commande.</p>
 				</div>
 			</div>
 			<div class="card">
