--- a/index-EN.html
+++ b/index-EN.html
@@ -36,7 +36,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 		<li class="h4"><a href="#marketplace">Marketplace</a> <i class="alti-icon alti-icon-marketplace"></i></li>
 		<li class="h4 d-md-none"><a href="#faq">FAQ</a></li>
 		<li class="h4"><a href="#contact">Contact Us</a></li>
-		<li class="h4" style="border-top: 1px #000 solid;margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">Boxing Day FAQ</a></li>
+		<li class="h4" style="border-top: 1px #000 solid; margin-top: 1.5em; padding-top: 1.5em;"><a href="#boxingday">Boxing Day FAQ</a></li>
 	</ul>
 	<h2 class="d-none d-md-block faq-menu">FAQ</h2>
 	<ul class="top-questions list-unstyled d-none d-md-block">
@@ -54,206 +54,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 	<div class="content" id="shipping">
 		<h1>Shipping</h1>
 		<div class="faq-search"><input type="text" placeholder="Search Shipping" /></div>
-		<div style="background-image: url('https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png'); padding: 0 1em 1em; margin: 1.5em 0 2em;">
-			<p style="font-weight: 500; font-size: 1.5em; margin-top: 0.5em; margin-bottom: 0;">Guaranteed Christmas delivery</p>
-			<p style="margin-bottom: 1em; margin-top: 0;">Until December 18 for greater Toronto, Montreal &amp; Ottawa</p>
-			<p>There’s still time! Don’t worry about Canada Post delays - we’ve taken them into account in our final ordering dates and added extra buffers just to be safe. We’ll even guarantee your delivery for Christmas: if you don’t get it in time, we’ll give you 20% of the cost of your order in Alti Dollars.*</p>
-			<p><strong>Xpresspost is FREE on orders over 49$.</strong> For a limited time only, in Canada.</p>
-			<a href="/collections/all" style="background-color: #eaeaea; color: #000; border: none;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'"> Shop now </a>
-			<p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff; line-height: 1.7em;">We’re closely monitoring Canada Post’s backlog caused by the rotating strike that ended on Nov. 27. The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method. These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong> We will provide daily updates on this page.</p>
-			<p style="font-weight: 500; font-size: 1.3em; margin-top: 0.5em;">Final ordering dates, by region and shipping method</p>
-			<p><i style="opacity: 0.55; white-space: nowrap;">(Last updated: December 18 2018)</i></p>
-			<div id="table-container">
-				<table id="shipping-holidays">
-					<thead style="vertical-align: bottom;">
-						<tr>
-							<th>Region</th>
-							<th>Xpresspost</th>
-							<th>Expedited Parcel</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Greater Montreal, Toronto &amp; Ottawa</strong></td>
-						</tr>
-						<tr>
-							<td>Greater Ottawa, Kingston, Belleville</td>
-							<td>18-Dec-18</td>
-							<td>18-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Guelph, Cambridge, London, Windsor, Owen Sound</td>
-							<td>18-Dec-18</td>
-							<td>18-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Longueuil, Gatineau</td>
-							<td>18-Dec-18</td>
-							<td>18-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Montreal, Laval (all postal codes starting with H)</td>
-							<td>18-Dec-18</td>
-							<td>18-Dec-18</td>
-						</tr>
-						<tr class="last-row">
-							<td>Southeast Ontario / GTA (all postal codes starting with L)</td>
-							<td>18-Dec-18</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-						</tr>
-						<tr class="last-row">
-							<td>Toronto (all postal codes starting with M)</td>
-							<td>18-Dec-18</td>
-							<td>18-Dec-18</td>
-						</tr>
-						<tr>
-							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Metropolitain Canada</strong></td>
-						</tr>
-						<tr>
-							<td>Eastern Ontario (all postal codes starting with K)</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Calgary / Greater Edmonton</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Charlottetown</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Halifax</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Quebec city, Trois-Rivières</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Regina / Greater Saskatoon</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">14-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Saint John / Moncton</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater St. John's</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Vancouver / Greater Victoria</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Greater Winnipeg</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">14-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Southwest Ontario (all postal codes starting with N)</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Western Ontario (all postal codes starting with P)</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Western Quebec (all postal codes starting with J)</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-							<td style="color: #ccc;">17-Dec-18</td>
-						</tr>
-						<tr>
-							<td colspan="3" style="border: none; padding: 1em 0 0.5em;"><strong>Rural Canada</strong></td>
-						</tr>
-						<tr>
-							<td>Alberta (all postal codes starting with T)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>British Columbia (all postal codes starting with V)</td>
-							<td style="color: #ccc;">14-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Eastern Quebec (all postal codes starting with G)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Iqaluit (all postal codes starting with X0A0A1, X0A0H0 and X0A1H0)</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Manitoba (all postal codes starting with R)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>New Brunswick (all postal codes starting with E)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Newfoundland (all postal codes starting with A)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">11-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Nova Scotia (all postal codes starting with B)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Prince Edward Island (all postal codes starting with C)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">12-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Saskatchewan (all postal codes starting with S)</td>
-							<td style="color: #ccc;">16-Dec-18</td>
-							<td style="color: #ccc;">13-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Whitehorse (all postal codes starting with Y1A)</td>
-							<td style="color: #ccc;">14-Dec-18</td>
-							<td style="color: #ccc;">10-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Yellowknife (all postal codes starting with X1A)</td>
-							<td style="color: #ccc;">14-Dec-18</td>
-							<td style="color: #ccc;">11-Dec-18</td>
-						</tr>
-						<tr>
-							<td>Yukon / Nunavut / NWT</td>
-							<td style="color: #ccc;">10-Dec-18</td>
-							<td style="color: #ccc;">30-Nov-18</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<div style="color: gray; font-size: small;">
-				<p>*The following requirements must be met to qualify for the 20% guarantee:</p>
-				<ul>
-					<li>Order is placed on or before final delivering dates to your specific region;</li>
-					<li>Your credit card must be successfully charged before the deadline;</li>
-					<li>An attempted delivery meets our delivery guarantee.</li>
-				</ul>
-			</div>
-		</div>
 		<div id="accordionShipping" class="accordion">
 			<div class="card">
 				<div class="card-header">
@@ -1113,7 +913,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<div class="card-body">
 					<p>Montreal region: 514 495-1111 <br />North America: 1 800 729-0322 <br />Outside of North America: 1 514 495-1111</p>
 					<p>Our staff is available to answer calls Monday to Friday, 9am to 10pm; Saturday, 10am to 6pm; and Sunday, 12pm to 10pm.</p>
-					<p>During Black Friday, from November 19 to November 26, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
 					<p>Please note all operations are in Eastern Standard Time.</p>
 					<p>Altitude Sports will return calls with a maximum delay of one to two business days if you leave a message via voice mail.</p>
 				</div>
@@ -1186,7 +985,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>What brands will be discounted?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-discounted-brands">
-					<p>During Boxing Day, it is possible to find sales on brands that are rarely discounted, such as <a href="/collections/arcteryx">Arc’teryx</a>, <a href="/collections/the-north-face">The North Face</a>, <a href="/collections/quartz-co">Quartz Co.</a>, <a href="/collections/icebreaker">Icebreaker</a>, <a href="/collections/soia-kyo">SOIA & KYO</a>, <a href="/collections/sorel">Sorel</a>, <a href="/collections/fjallraven">Fjällräven</a> and <a href="/pages/boxing-day">several others</a>. In all, 300+ brands will be discounted during Boxing Day. Specific brands may not be discounted at first, but they might go on sale later in the week. Our <a href="/pages/boxing-day">Boxing Day sales calendar</a> shows what day your favourite brands will be on sale. You can also subscribe to our newsletter to receive updates throughout the week on new discounts and promotions. In general, the brands that are not discounted on December 26th will remain full-price throughout the season.</p>
+					<p>During Boxing Day, it is possible to find sales on brands that are rarely discounted, such as <a href="/collections/arcteryx">Arc’teryx</a>, <a href="/collections/the-north-face">The North Face</a>, <a href="/collections/quartz-co">Quartz Co.</a>, <a href="/collections/icebreaker">Icebreaker</a>, <a href="/collections/soia-kyo">SOIA &amp; KYO</a>, <a href="/collections/sorel">Sorel</a>, <a href="/collections/fjallraven">Fjällräven</a> and <a href="/pages/boxing-day">several others</a>. In all, 300+ brands will be discounted during Boxing Day. Specific brands may not be discounted at first, but they might go on sale later in the week. Our <a href="/pages/boxing-day">Boxing Day sales calendar</a> shows what day your favourite brands will be on sale. You can also subscribe to our newsletter to receive updates throughout the week on new discounts and promotions. In general, the brands that are not discounted on December 26th will remain full-price throughout the season.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -1222,7 +1021,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Will I receive my order later than usual during Boxing Day sales, as more people are ordering from Altitude Sports at the same time?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-delivery-later">
-					<p>At Altitude Sports, we’re proud to ship as quickly during high traffic periods as we do during the rest of the year. Our quick shipping is what sets us apart from the competition. However, due to the extreme volume of Boxing Day for shipping couriers, you may experience additional delays which are out of our control. </p>
+					<p>At Altitude Sports, we’re proud to ship as quickly during high traffic periods as we do during the rest of the year. Our quick shipping is what sets us apart from the competition. However, due to the extreme volume of Boxing Day for shipping couriers, you may experience additional delays which are out of our control.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -1247,7 +1046,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>What other website does a killer Boxing Day Sale?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-the-last-hunt">
-					<p><a href="https://www.thelasthunt.com/" target="_blank">The Last Hunt</a>, which already offers the best prices on leading products from past seasons, also offers additional sales on their already-discounted products. On <a href="https://www.thelasthunt.com/" target="_blank">Thelasthunt.com</a> all sales are final, and price matching does not apply. If you like an item and the current discount, we suggest you buy it while it’s still available. If you wait too long, there’s a risk that the item will no longer be available. Keep in mind that sizes and colours are limited on <a href="https://www.thelasthunt.com/" target="_blank">Thelasthunt.com</a> because they are collections from past seasons.</p>
+					<p><a href="https://www.thelasthunt.com/" target="_blank" rel="noopener noreferrer">The Last Hunt</a>, which already offers the best prices on leading products from past seasons, also offers additional sales on their already-discounted products. On <a href="https://www.thelasthunt.com/" target="_blank" rel="noopener noreferrer">Thelasthunt.com</a> all sales are final, and price matching does not apply. If you like an item and the current discount, we suggest you buy it while it’s still available. If you wait too long, there’s a risk that the item will no longer be available. Keep in mind that sizes and colours are limited on <a href="https://www.thelasthunt.com/" target="_blank" rel="noopener noreferrer">Thelasthunt.com</a> because they are collections from past seasons.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -1256,10 +1055,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body" id="boxing-day-contact-us">
 					<p>Altitude Sports is proud to have a devoted <a href="#contact">customer service team available seven days a week</a> to provide you with the best online shopping experience possible. If you have further questions, our customer service agents can be contacted by chat, phone or email.</p>
-					<p><strong>Email:</strong> info@altitude-sports.com<br/>
-					<strong>Phone: Montreal region:</strong> 514-495-1111<br/>
-					<strong>Phone: North America:</strong> 1-800-729-0322<br/>
-					<strong>Phone: Outside of North America:</strong> 1-514-495-1111</p>
+					<p><strong>Email:</strong> info@altitude-sports.com<br /> <strong>Phone: Montreal region:</strong> 514-495-1111<br /> <strong>Phone: North America:</strong> 1-800-729-0322<br /> <strong>Phone: Outside of North America:</strong> 1-514-495-1111</p>
 				</div>
 			</div>
 			<div class="card">
@@ -1268,12 +1064,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body" id="boxing-day-customer-service-hours">
 					<p>During Boxing Day, our staff will be available:</p>
-					<p style="line-height: 1.75em;padding-left: 1em;">Monday <span class="text-nowrap">December 24:</span> <span class="text-nowrap">9am - 3pm EST</span><br/>
-					Tuesday <span class="text-nowrap">December 25:</span> <span class="text-nowrap">12pm - 5pm EST</span><br/>
-					From <span class="text-nowrap">December 26</span> to <span class="text-nowrap">December 30:</span> <span class="text-nowrap">8:30am -12:30am EST</span><br/>
-					Monday <span class="text-nowrap">December 31:</span> <span class="text-nowrap">9am - 3pm EST</span><br/>
-					Tuesday <span class="text-nowrap">January 1:</span> <span class="text-nowrap">12pm - 5pm EST</span><br/>
-					From <span class="text-nowrap">January 2</span> to <span class="text-nowrap">January 4:</span> <span class="text-nowrap">9am - 12:30am EST</span></p>
+					<p style="line-height: 1.75em; padding-left: 1em;">Monday <span class="text-nowrap">December 24:</span> <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday <span class="text-nowrap">December 25:</span> <span class="text-nowrap">12pm - 5pm EST</span><br /> From <span class="text-nowrap">December 26</span> to <span class="text-nowrap">December 30:</span> <span class="text-nowrap">8:30am -12:30am EST</span><br /> Monday <span class="text-nowrap">December 31:</span> <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday <span class="text-nowrap">January 1:</span> <span class="text-nowrap">12pm - 5pm EST</span><br /> From <span class="text-nowrap">January 2</span> to <span class="text-nowrap">January 4:</span> <span class="text-nowrap">9am - 12:30am EST</span></p>
 					<p>Normal hours will be back in effect <span class="text-nowrap">January 5.</span></p>
 				</div>
 			</div>
