Update Price Matching Demand Link

--- a/index-EN.html
+++ b/index-EN.html
@@ -471,6 +471,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<li>Our Lowest Price Guarantee does not apply to products sold by Marketplace sellers (see <a href="/pages/marketplace-osprey"><u>Osprey</u></a> seller page).</li>
 				</ul>
 				<p>Please don't hesitate to contact one of our customer service representatives if you have further questions.</p>
+				<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
 			</div>
 		</div>
 		<!-- #accordionPrice -->
@@ -977,7 +978,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body" id="boxing-day-request-price-drops">
 					<p>Please follow our price matching procedure by clicking the button below.</p>
-					<a href="#price" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
+					<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
 				</div>
 			</div>
 			<div class="card">
