--- a/index-FR.html
+++ b/index-FR.html
@@ -471,6 +471,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<li>Notre politique d'égalisation des prix ne s’applique pas sur les articles provenant des vendeurs de la Place de marché (voir la page <a href="/pages/marketplace-osprey"><u>Osprey</u></a>).</li>
 				</ul>
 				<p>N'hésitez pas à contacter un des représentants au service à la clientèle d'Altitude Sports si vous avez des questions.</p>
+				<a href="https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" target="_https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Demandez une égalisation de prix</a>
 			</div>
 		</div>
 		<!-- #accordionPrice -->
@@ -986,7 +987,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body" id="boxing-day-request-price-drops">
 					<p>Veuillez suivre la procédure d’égalisation de prix en cliquant sur le bouton ci-dessous.</p>
-					<a href="#price" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Demandez une égalisation de prix</a>
+					<a href="https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" target="_https://altitudesports.zendesk.com/hc/fr/requests/new?ticket_form_id=291167" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Demandez une égalisation de prix</a>
 				</div>
 			</div>
 			<div class="card">
