Add SAC Boxing Day Hours to chat and telephone

--- a/index-FR.html
+++ b/index-FR.html
@@ -898,8 +898,16 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Clavardage</h2>
 				</div>
 				<div class="card-body">
-					<p>Pour faire une demande de clavardage avec nous, vous pouvez simplement cliquer sur l’icône dans le coin droit au bas de votre écran :</p>
+					<p>Pour faire une demande de clavardage avec nous, vous pouvez simplement cliquer sur l’icône dans le coin droit au bas de votre écran:</p>
 					<p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-FR.png" /></p>
+					<p>À l'occasion des soldes d’après Noël, nos conseillers seront disponibles:<br/><br/>
+						Lundi 24 décembre: <span class="text-nowrap">9h - 15h HE</span><br/>
+						Mardi 25 décembre: <span class="text-nowrap">12h - 17h HE</span><br/>
+						Du 26 au 30 décembre: <span class="text-nowrap">8h30 - 00h30 HE</span><br/>
+						Lundi 31 décembre: <span class="text-nowrap">9h - 15h HE</span><br/>
+						Mardi 1er janvier: <span class="text-nowrap">12h - 17h HE</span><br/>
+						Du 2 au 4 janvier: <span class="text-nowrap">8h30 - 00h30 HE</span></p>
+					<p>Le retour aux heures régulières se fera dès le 5 janvier.</p>
 					<p>Des conseillers au service à la clientèle sont disponibles pour le clavardage du lundi au vendredi, de 9 h à 22 h, samedi, de 10 h à 18 h et dimanche, de 12 h à 22 h HE.</p>
 					<p><em>* Veuillez noter que l'icône changera à « Aide » si notre service de clavardage n'est pas disponible. Cliquez sur celui-ci et utiliser le formulaire pour nous envoyer une demande.</em></p>
 				</div>
@@ -910,6 +918,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body">
 					<p>De la région de Montréal : 514 495-1111 <br />D'ailleurs en Amérique du Nord : 1 855 585-6266 <br />De l'extérieur de l'Amérique du Nord : 1 514 495-1111</p>
+					<p>À l'occasion des soldes d’après Noël, nos conseillers seront disponibles:<br/><br/>
+						Lundi 24 décembre: <span class="text-nowrap">9h - 15h HE</span><br/>
+						Mardi 25 décembre: <span class="text-nowrap">12h - 17h HE</span><br/>
+						Du 26 au 30 décembre: <span class="text-nowrap">8h30 - 00h30 HE</span><br/>
+						Lundi 31 décembre: <span class="text-nowrap">9h - 15h HE</span><br/>
+						Mardi 1er janvier: <span class="text-nowrap">12h - 17h HE</span><br/>
+						Du 2 au 4 janvier: <span class="text-nowrap">8h30 - 00h30 HE</span></p>
+					<p>Le retour aux heures régulières se fera dès le 5 janvier.</p>
 					<p>Des conseillers au service à la clientèle prennent les appels du lundi au vendredi, de 9 h à 22 h, le samedi de 10 h à 18 h et le dimanche de 12 h à 22 h.</p>
 					<p>Prendre note que nos heures d’opérations sont basées sur l’heure de l’Est.</p>
 					<p>Altitude Sports s'engage à vous rappeler dans un délai de 1 à 2 jours ouvrables maximum si vous laissez un message sur la boîte vocale.</p>
