--- a/index-EN.html
+++ b/index-EN.html
@@ -903,6 +903,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<div class="card-body">
 					<p>To initiate a chat with us, you can simply click on the icon in the bottom right corner of your screen:</p>
 					<p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-EN.png" /></p>
+					<p>During Boxing Day, our staff will be available:<br/><br/>
+						Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br/>
+						Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br/>
+						From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br/>
+						Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br/>
+						Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br/>
+						From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
+					<p>Normal hours will be back in effect January 5.</p>
 					<p>Our staff is available to chat Monday – Friday, 9am – 10pm, Saturday, 10am – 6pm and Sunday, 12pm –10pm ET.</p>
 					<p><em>* Please note that the icon will change to "Help" when our chat service is not available, simply use the form by clicking on it to send us a request instead.</em></p>
 				</div>
@@ -913,6 +921,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body">
 					<p>Montreal region: 514 495-1111 <br />North America: 1 800 729-0322 <br />Outside of North America: 1 514 495-1111</p>
+					<p>During Boxing Day, our staff will be available:<br/><br/>
+						Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br/>
+						Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br/>
+						From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br/>
+						Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br/>
+						Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br/>
+						From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
+					<p>Normal hours will be back in effect January 5.</p>
 					<p>Our staff is available to answer calls Monday to Friday, 9am to 10pm; Saturday, 10am to 6pm; and Sunday, 12pm to 10pm.</p>
 					<p>Please note all operations are in Eastern Standard Time.</p>
 					<p>Altitude Sports will return calls with a maximum delay of one to two business days if you leave a message via voice mail.</p>
