pulling from prod

--- a/index-EN.html
+++ b/index-EN.html
@@ -471,7 +471,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<li>Our Lowest Price Guarantee does not apply to products sold by Marketplace sellers (see <a href="/pages/marketplace-osprey"><u>Osprey</u></a> seller page).</li>
 				</ul>
 				<p>Please don't hesitate to contact one of our customer service representatives if you have further questions.</p>
-				<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
+				<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" rel="noopener noreferrer" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
 			</div>
 		</div>
 		<!-- #accordionPrice -->
@@ -903,13 +903,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<div class="card-body">
 					<p>To initiate a chat with us, you can simply click on the icon in the bottom right corner of your screen:</p>
 					<p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-EN.png" /></p>
-					<p>During Boxing Day, our staff will be available:<br/><br/>
-						Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br/>
-						Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br/>
-						From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br/>
-						Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br/>
-						Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br/>
-						From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
+					<p>During Boxing Day, our staff will be available:<br /><br /> Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br /> From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br /> Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br /> From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
 					<p>Normal hours will be back in effect January 5.</p>
 					<p>Our staff is available to chat Monday – Friday, 9am – 10pm, Saturday, 10am – 6pm and Sunday, 12pm –10pm ET.</p>
 					<p><em>* Please note that the icon will change to "Help" when our chat service is not available, simply use the form by clicking on it to send us a request instead.</em></p>
@@ -921,13 +915,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body">
 					<p>Montreal region: 514 495-1111 <br />North America: 1 800 729-0322 <br />Outside of North America: 1 514 495-1111</p>
-					<p>During Boxing Day, our staff will be available:<br/><br/>
-						Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br/>
-						Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br/>
-						From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br/>
-						Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br/>
-						Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br/>
-						From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
+					<p>During Boxing Day, our staff will be available:<br /><br /> Monday December 24: <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday December 25: <span class="text-nowrap">12pm - 5pm EST</span><br /> From December 26 to December 30: <span class="text-nowrap">8:30am -12:30am EST</span><br /> Monday December 31: <span class="text-nowrap">9am - 3pm EST</span><br /> Tuesday January 1: <span class="text-nowrap">12pm - 5pm EST</span><br /> From January 2 to January 4: <span class="text-nowrap">9am - 12:30am EST</span></p>
 					<p>Normal hours will be back in effect January 5.</p>
 					<p>Our staff is available to answer calls Monday to Friday, 9am to 10pm; Saturday, 10am to 6pm; and Sunday, 12pm to 10pm.</p>
 					<p>Please note all operations are in Eastern Standard Time.</p>
@@ -994,7 +982,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 				<div class="card-body" id="boxing-day-request-price-drops">
 					<p>Please follow our price matching procedure by clicking the button below.</p>
-					<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
+					<a href="https://altitudesports.zendesk.com/hc/en-us/requests/new?ticket_form_id=291167" target="_blank" style="background-color: #eaeaea; color: #000; border: none; text-decoration: none; margin-bottom: 2em;" class="btn btn-primary btn-lg active" role="button" rel="noopener noreferrer" onmouseover="this.style.color='#fff'; this.style.backgroundColor='#4b4b4b'" onmouseout="this.style.color='#000'; this.style.backgroundColor='#eaeaea'">Request Price Match</a>
 				</div>
 			</div>
 			<div class="card">
