udpate FR content

--- a/index-FR.html
+++ b/index-FR.html
@@ -106,8 +106,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Annulation de commande</h2>
 				</div>
 				<div class="card-body">
-					<p>Si vous désirez annuler une commande, veuillez contacter notre service à la clientèle le plus rapidement possible au 1-855-585-6266 ou par clavardage pour que nous</p>
-					<p>vérifions l’état de votre commande. Si cette dernière est toujours en traitement, nous pourrons l’annuler.</p>
+					<p>Si vous désirez annuler une commande, veuillez contacter notre service à la clientèle le plus rapidement possible au 1-855-585-6266 ou par clavardage pour que nous vérifions l’état de votre commande. Si cette dernière est toujours en traitement, nous pourrons l’annuler.</p>
 					Si vous devez nous contacter en dehors de nos heures d’ouvertures, veuillez nous écrire à <a href="mailto:info@altitude-sports.com">info@altitude-sports.com</a> et indiquer dans le titre du courriel : « ANNULATION DE LA COMMANDE #0012345 ».
 					<p> </p>
 					<p>Veuillez noter que nous expédions la majorité de nos commandes en 24 heures. Si la commande est déjà expédiée, nous ne pouvons malheureusement pas l’annuler.</p>
@@ -961,7 +960,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>S’agit-il de ventes finales?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-sale-finals">
-					<p>Non, vous bénéficiez de la <a href="#returns_3">politique de retour de 90</a> jours habituelle. Nous vous encourageons à acheter un même produit en plusieurs tailles pour l’essayer si vous n’êtes pas certain de votre grandeur puisque les stocks seront limités après les soldes d’après Noël. Nous <a href="#returns">retourner un produit</a> est simple, facile et gratuit pour les <a href="/products/membership">membres à vie Altitude Sports</a> et les clients qui placent une première commande.</p>
+					<p>Non, vous bénéficiez de la <a href="#returns_3">politique de retour de 90 jours</a> habituelle. Nous vous encourageons à acheter un même produit en plusieurs tailles pour l’essayer si vous n’êtes pas certain de votre grandeur puisque les stocks seront limités après les soldes d’après Noël. Nous <a href="#returns">retourner un produit</a> est simple, facile et gratuit pour les <a href="/products/membership">membres à vie Altitude Sports</a> et les clients qui placent une première commande.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -969,7 +968,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Que faire si les produits que j’ai achetés ne me font pas?</h2>
 				</div>
 				<div class="card-body" id="boxing-day-return-fit">
-					<p>Ne vous inquiétez pas, tel que mentionné ci-haut, vous bénéficiez de la <a href="#returns_3">politique de retour de 90</a> pour les produits vendus durant les soldes d’après Noël. Pour nous retourner un produit, suivez simplement les étapes indiquées dans la politique. Assurez-vous de nous retourner les produits en parfaite condition, avec les étiquettes et tout l’emballage d’origine (ex: boîte à chaussure, cintres, etc.) Les remboursements sont généralement effectués dans un délai de 5 jours ouvrables, une fois que nous avons reçu le produit.</p>
+					<p>Ne vous inquiétez pas, tel que mentionné ci-haut, vous bénéficiez de la <a href="#returns_3">politique de retour de 90 jours</a> pour les produits vendus durant les soldes d’après Noël. Pour nous retourner un produit, suivez simplement les étapes indiquées dans la politique. Assurez-vous de nous retourner les produits en parfaite condition, avec les étiquettes et tout l’emballage d’origine (ex: boîte à chaussure, cintres, etc.) Les remboursements sont généralement effectués dans un délai de 5 jours ouvrables, une fois que nous avons reçu le produit.</p>
 				</div>
 			</div>
 			<div class="card">
