update europe shipping mention

--- a/index-FR.html
+++ b/index-FR.html
@@ -207,7 +207,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Livraison en Europe</h2>
 				</div>
 				<div class="card-body">
-					<p>Altitude Sports ne peut livrer en Europe en raison du RGPD.</p>
+					<p>Altitude Sports ne peut livrer en Europe.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -811,7 +811,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 						<li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada-us.png" alt="Canada &amp; US only" style="padding-right: 5px;" />Canada et États-unis seulement</li>
 						<li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada.png" alt="Canada only" style="padding-right: 5px;" />Canada seulement</li>
 					</ul>
-					<p><i>N.B.</i> Altitude Sports ne peut expédier en Europe en raison de la réglementation GBPR.</p>
+					<p><i>N.B.</i> Altitude Sports ne peut expédier en Europe.</p>
 					<p>Ces icônes se trouvent sur chaque page de produit, sous le bouton « ajouter au panier ». Vous les retrouverez également dans votre panier d’achats, dans le récapitulatif de votre commande.</p>
 				</div>
 			</div>
