--- a/index-EN.html
+++ b/index-EN.html
@@ -206,7 +206,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<h2>Shipping to Europe</h2>
 				</div>
 				<div class="card-body">
-					<p>Altitude Sports cannot ship to Europe due to GDPR restrictions.</p>
+					<p>Altitude Sports cannot ship to Europe.</p>
 				</div>
 			</div>
 			<div class="card">
@@ -812,7 +812,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 						<li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/shipping-worldwide.png" alt="Shipped" /> This product can be shipped around the world</li>
 						<li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada-us.png" alt="Shipping to Canada" /> This product can only be shipped to Canada and the United States</li>
 						<li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada.png" alt="Shipping to Canada and the USA" /> This product can only be shipped to Canada</li>
-						<li><i>NB</i> Altitude Sports cannot ship to Europe due to GBPR restrictions</li>
+						<li><i>NB</i> Altitude Sports cannot ship to Europe.</li>
 					</ul>
 					<p>These icons can be found under the ‘Add to Cart’ button. You can also find them in your shopping basket upon confirmation of your order.</p>
 				</div>
